--- a/.github/workflows/nbdiff.yaml
+++ b/.github/workflows/nbdiff.yaml
@@ -20,6 +20,7 @@ jobs:
               run: nbdiff ${{ github.event.pull_request.base.ref }} > diff.log
 
             - name: Get comment body
+              id: get-comment-body
               run: |
                 body=$(cat diff.log)
                 body="${body//'%'/'%25'}"
